--- a/web/app/templates/search.html
+++ b/web/app/templates/search.html
@@ -7,5 +7,5 @@
         window.name = '{{ name }}';
         window.netid = '{{ netid }}';
     </script>
-    <script src="/static/bundle.js"></script>
+    <script src="/static/js/bundled/main.js"></script>
 </body>
