--- a/web/app/templates/search_page.html
+++ b/web/app/templates/search_page.html
@@ -4,8 +4,8 @@
 <body>
     <div id="root"/>
     <script>
-        window.name = '{{ name }}';
-        window.netid = '{{ netid }}';
+        window.query = '{{ query }}';
+        window.descriptors = '{{ descriptors }}';
     </script>
     <script src="/static/js/bundled/main_search_page.js"></script>
 </body>
