--- a/web/app/templates/search_results.html
+++ b/web/app/templates/search_results.html
@@ -8,4 +8,6 @@
         window.descriptors = '{{ descriptors }}';
     </script>
     <script src="/static/js/bundled/main_search_result.js"></script>
+    <link rel="stylesheet" href="/static/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </body>
