--- a/web/app/static/main.css
+++ b/web/app/static/main.css
@@ -1,84 +1,174 @@
+html * {
+    font-family: 'Roboto', sans-serif;
+}
+
 @media (min-width: 1200px) {
-  .container {
-    max-width: 970px;
-  }
+    .container {
+        max-width: 970px;
+    }
 }
 
-@media (min-width:400px){
-  .global-search {
-    padding: 20px 0;
-    text-align:center;
-  }
-  body {
-    padding-top: 15%;
-    padding-bottom: 15px;
-  }
-  .global-search {
-    text-align:center;
-    padding:10px;
-  }
-  .global-search .form-control {
-    width:500px;
-  }
-  .global-search * {
-    display:inline-block;
-    margin-bottom:0;
-  }
+@media (min-width:400px) {
+    .global-search {
+        padding: 20px 0;
+        text-align: center;
+    }
+    body {
+        padding-top: 15%;
+        padding-bottom: 15px;
+    }
+    .global-search {
+        text-align: center;
+        padding: 10px;
+    }
+    .global-search .form-control {
+        width: 500px;
+    }
+    .global-search * {
+        display: inline-block;
+        margin-bottom: 0;
+    }
 }
 
-.topcorner{
-  position: absolute;
-  top: 2%;
-  right: 2%;
+.topcorner {
+    position: absolute;
+    top: 2%;
+    right: 2%;
 }
 
 .search-bar {
-  background-color: #fff;
-  border: solid 1px #E4E4E4;
-  border-radius: 3px;
-  padding: 1px;
-  text-align: left;
-  width: 600px;
+    background-color: #fff;
+    border: solid 1px #E4E4E4;
+    border-radius: 3px;
+    padding: 1px;
+    text-align: left;
+    width: 600px;
 }
 
-.search-bar input{
-  border: 0;
-  box-shadow: none;
-  display: inline-block;
-  width: 560px;
+.search-bar input {
+    border: 0;
+    box-shadow: none;
+    display: inline-block;
+    width: 560px;
 }
 
 .search-bar input:focus {
-  outline: none;
+    outline: none;
 }
 
 .search-bar button {
-  background: none;
-  box-shadow: none;
-  border: 0;
-  color: #777777;
-  margin-top: -8px;
-  padding: 0 6px 0 6px;
-  border-left: solid 1px #777777;
+    background: none;
+    box-shadow: none;
+    border: 0;
+    color: #777777;
+    margin-top: -8px;
+    padding: 0 6px 0 6px;
+    border-left: solid 1px #777777;
 }
 
 .search-bar button:hover {
-  background: none;
+    background: none;
 }
 
 .search-bar .glyphicon {
-  font-size: 22px;
-  margin-top: 2px;
+    font-size: 22px;
+    margin-top: 2px;
 }
 
 .search-bar .glyphicon:focus {
-  outline: none;
+    outline: none;
 }
 
 .step-links a {
-  color: #4285F4;
+    color: #4285F4;
 }
 
 .descriptor-bar {
-  margin-top: 8px;
+    margin-top: 8px;
+}
+
+/* PRODUCT LISTING */
+
+.product-listing-container{
+  display:flex;
+  flex-direction: column;
+}
+
+.product-listing {
+    display: flex;
+    margin: 12px 5vw 12px 5vw;
+}
+
+.product-img-container {
+    width: 16vw;
+    height: 16vw;
+    display: flex;
+}
+
+.product-img {
+    max-width: 100%;
+    max-height: 100%;
+    align-self: center;
+}
+
+.product-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-left: 24px;
+}
+
+.product-title {
+    font-size: 24px;
+    font-weight: 1000;
+    margin-bottom: 8px;
+}
+
+.product-seller {
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.product-listing-body {
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+    margin-top: 12px;
+}
+
+.product-body-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.product-price {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-bottom: 16px;
+}
+
+.product-price-big {
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.product-price-superscript {
+    font-size: 14px;
+    font-weight: 900;
+}
+
+.product-desc {
+    font-size: 16px;
+    height: 100%;
+}
+
+.product-keyword-dashboard {}
+
+.product-divider {
+    background-color: #686B6B;
+    height: 2px;
+    margin: 0px 10vw 0px 10vw;
 }
