--- a/web/app/templates/search.html
+++ b/web/app/templates/search.html
@@ -8,4 +8,5 @@
         window.netid = '{{ netid }}';
     </script>
     <script src="/static/js/bundled/main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </body>
