--- a/web/app/static/main.css
+++ b/web/app/static/main.css
@@ -39,46 +39,90 @@
   padding: 1px;
   text-align: left;
   width: 600px;
+  display: flex;
+  align-items: center;
 }
 
-.search-bar input{
+.search-bar-input{
   border: 0;
   box-shadow: none;
-  display: inline-block;
-  width: 560px;
+  display: flex;
+  align-self: flex-start;
+  align-items: left;
+  width: 552px;
 }
 
-.search-bar input:focus {
+.search-bar-input:focus {
   outline: none;
 }
 
-.search-bar button {
+.descriptor-wrapper {
+  width: 552px;
+}
+
+.descriptor-bar-input {
+  border: 0;
+  box-shadow: none;
+  align-self: flex-start;
+  align-items: left;
+  width: 100%;
+}
+
+.descriptor-bar-input:focus {
+  outline: none;
+}
+
+.search-bar-button {
   background: none;
   box-shadow: none;
   border: 0;
   color: #777777;
-  margin-top: -8px;
+  margin: 4px 0;
   padding: 0 6px 0 6px;
   border-left: solid 1px #777777;
+  outline: 0 none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
-.search-bar button:hover {
+.search-bar-button:focus,
+.search-bar-button:focus:active {
   background: none;
+  outline: 0 none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
 .search-bar .glyphicon {
   font-size: 22px;
-  margin-top: 2px;
+  margin: 0 4px;
 }
 
-.search-bar .glyphicon:focus {
-  outline: none;
+.search-bar .glyphicon-remove {
+  font-size: 16px;
+  margin: 0 0 0 4px;
 }
 
 .step-links a {
   color: #4285F4;
 }
 
-.descriptor-bar {
-  margin-top: 8px;
+.search-wrapper {
+  margin: auto;
+  max-width: 600px;
+}
+
+.descriptor-tag-button {
+  background: transparent;
+  margin: 0;
+  padding: 0;
+}
+
+.descriptor-tag {
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.descriptor-tag-wrapper {
+  margin: -2px 4px 8px;
 }
