--- a/web/app/templates/search.html
+++ b/web/app/templates/search.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/static/main.css" />
 </head>
 <body>
-    <div id="root"/>
-    <script>
-        window.name = '{{ name }}';
-        window.netid = '{{ netid }}';
-    </script>
+    <div class="main-page-body" id="root" />
     <script src="/static/js/bundled/main.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </body>
