--- a/web/app/templates/search_results.html
+++ b/web/app/templates/search_results.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/static/main.css" />
 </head>
 <body>
-    <div id="root"/>
+    <div class="result-page-body" id="root" />
     <script>
         window.query = '{{ query }}';
         window.descriptors = '{{ descriptors }}';
     </script>
     <script src="/static/js/bundled/main_search_result.js"></script>
-    <link rel="stylesheet" href="/static/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </body>
