--- a/web/app/static/main.css
+++ b/web/app/static/main.css
@@ -13,7 +13,6 @@ html * {
         padding: 20px 0;
         text-align: center;
     }
-
     .global-search {
         text-align: center;
         padding: 10px;
@@ -92,6 +91,21 @@ html * {
 
 .descriptor-bar-input:focus {
     outline: none;
+}
+
+.descriptor-bar-container {
+    display: flex;
+    align-content: flex-end;
+    justify-content: flex-start;
+}
+
+.suggestionTag {
+    font-size: 12px;
+}
+
+.suggestionTag.tag {
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .search-bar-button {
@@ -282,6 +296,7 @@ html * {
 }
 
 /* Search Result */
+
 .logo-small {
     display: inline-block;
     vertical-align: top;
