--- a/web/app/static/main.css
+++ b/web/app/static/main.css
@@ -217,7 +217,7 @@ html * {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    max-width: 60%;
 }
 
 .product-price {
@@ -240,6 +240,8 @@ html * {
 .product-desc {
     font-size: 16px;
     height: 100%;
+    max-height: 200px;
+    overflow: scroll;
 }
 
 .product-keyword-dashboard {
