--- a/web/app/templates/search_results.html
+++ b/web/app/templates/search_results.html
@@ -10,5 +10,6 @@
         window.query = '{{ query }}';
         window.descriptors = '{{ descriptors }}';
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.js"></script>
     <script src="/static/js/bundled/main_search_result.js"></script>
 </body>
