--- a/web/app/static/main.css
+++ b/web/app/static/main.css
@@ -2,6 +2,10 @@ html * {
     font-family: 'Roboto', sans-serif;
 }
 
+a * {
+    color: #454B4D;
+}
+
 @media (min-width: 1200px) {
     .container {
         max-width: 970px;
@@ -178,6 +182,7 @@ html * {
 
 .product-img-container {
     width: 300px;
+    flex-shrink: 0;
     display: flex;
 }
 
@@ -199,6 +204,11 @@ html * {
     font-size: 20px;
     font-weight: 1000;
     margin-bottom: 8px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-width: 0;
+    max-width: 50vw;
 }
 
 .product-seller {
@@ -238,7 +248,7 @@ html * {
 }
 
 .product-desc {
-    font-size: 16px;
+    font-size: 12px;
     height: 100%;
     max-height: 200px;
     overflow: scroll;
@@ -316,6 +326,7 @@ html * {
 }
 
 /* react popup (lib) */
+
 .mm-popup {
     display: none;
 }
