--- a/web/app/static/main.css
+++ b/web/app/static/main.css
@@ -123,12 +123,16 @@ a * {
     padding: 2px 39px 2px 39px;
     background-color: rgba(82, 142, 151, 1);
     font-weight: bolder;
+    color: #2F575B;
+    cursor: pointer;
 }
 
 .desc-tag.down {
     padding: 2px 39px 2px 39px;
     background-color: rgba(233, 108, 98, 1);
     font-weight: bolder;
+    color: #8C3D37;
+    cursor: pointer;
 }
 
 .refresh-button {
