--- a/web/app/static/main.css
+++ b/web/app/static/main.css
@@ -587,3 +587,11 @@ a * {
 .card-5 {
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
+
+.card-left {
+    border-radius: 4px 2px 2px 4px;
+}
+
+.card-right {
+    border-radius: 2px 4px 4px 2px;
+}
