--- a/web/app/templates/search_results.html
+++ b/web/app/templates/search_results.html
@@ -8,7 +8,8 @@
     <div class="result-page-body" id="root" />
     <script>
         window.query = '{{ query }}';
-        window.descriptors = '{{ descriptors }}';
+        window.positive = '{{ positive }}';
+        window.negative = '{{ negative }}';
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.js"></script>
     <script src="/static/js/bundled/main_search_result.js"></script>
