--- a/web/app/static/main.css
+++ b/web/app/static/main.css
@@ -136,17 +136,15 @@ a * {
 }
 
 .refresh-button {
-    background-color: white;
-    border-radius: 30px;
-    font-size: 30px;
-    margin-right: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 12px;
-    flex-grow: 0;
-    color: #777777;
-    height: 50%;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.01), 0 1px 1px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    border-radius: 4px;
+    margin: 4px 8px;
+    font-weight: 600;
+}
+
+.refresh-button:hover {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25), 0 3px 3px rgba(0, 0, 0, 0.22);
 }
 
 .refresh-button:focus {
