--- a/web/app/templates/search_results.html
+++ b/web/app/templates/search_results.html
@@ -3,6 +3,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/static/main.css" />
+    <link rel="shortcut icon" type="image/png" href="/static/img/favicon.ico" />
 </head>
 <body>
     <div class="result-page-body" id="root" />
