--- a/web/app/static/main.css
+++ b/web/app/static/main.css
@@ -345,7 +345,7 @@ a * {
 
 .result-page-bar {
     display: inline-block;
-    margin: 0 12px 8px;
+    margin: -12px 12px;
 }
 
 .result-page-bar-background {
