--- a/web/app/templates/search.html
+++ b/web/app/templates/search.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/static/main.css" />
     <link rel="shortcut icon" type="image/png" href="/static/img/favicon.ico" />
-   	<title>Amazen</title>
+   	<title>Amazen | Review Driven Search</title>
 </head>
 <body>
     <div class="main-page-body" id="root" />
