made links smaller

--- a/web/app/templates/search.html
+++ b/web/app/templates/search.html
@@ -7,7 +7,7 @@
    	<title>Amazen | Review Driven Search</title>
 </head>
 <body>
-	<div style='text-align:right'>
+	<div style='text-align:right; font-size: 8px'>
         <a href="http://167.99.227.70/">Proto2</a>
         <a href="http://198.199.122.117/">Proto1</a>
     </div>
