--- a/web/app/templates/search_results.html
+++ b/web/app/templates/search_results.html
@@ -4,6 +4,16 @@
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/static/main.css" />
     <link rel="shortcut icon" type="image/png" href="/static/img/favicon.ico" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-93944589-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-93944589-2');
+</script>
+
     <title>Amazen | Review Driven Search</title>
 </head>
 <body>
